--- a/group_vars/core.yml
+++ b/group_vars/core.yml
@@ -1,78 +1,85 @@
 ---
-root_bri:
- 15:
-  root: "{{ attr.15.root }}"
- 16:
-  root: "{{ attr.16.root }}"
- 17:
-  root: "{{ attr.17.root }}"
- 18:
-  root: "{{ attr.18.root }}"
- 55:
-  root: "{{ attr.55.root }}"
- 56:
-  root: "{{ attr.16.root }}"
- 57:
-  root: "{{ attr.57.root }}"
- 58:
-  root: "{{ attr.58.root }}"
-   
 svi_int:
- vlan15:
-   ip: "{{ attr.15.ip }}"
-   mask: 255.255.255.0
-   vip: 10.0.15.254
-   priority: "{{ attr.15.hsrp_pri }}"
- vlan16:
-   ip: "{{ attr.16.ip }}"
-   mask: 255.255.255.0
-   vip: 10.0.15.254
-   priority: "{{ attr.16.hsrp_pri }}"
- vlan17:
-   ip: "{{ attr.17.ip }}"
-   mask: 255.255.255.0
-   vip: 10.0.15.254
-   priority: "{{ attr.17.hsrp_pri }}"
- vlan18:
-   ip: "{{ attr.18.ip }}"
-   mask: 255.255.255.0
-   vip: 10.0.15.254
-   priority: "{{ attr.18.hsrp_pri }}"
- vlan55:
-   ip: "{{ attr.55.ip }}"
-   mask: 255.255.255.0
-   vip: 10.0.15.254
-   priority: "{{ attr.55.hsrp_pri }}"
- vlan56:
-   ip: "{{ attr.56.ip }}"
-   mask: 255.255.255.0
-   vip: 10.0.15.254
-   priority: "{{ attr.56.hsrp_pri }}"
- vlan57:
-   ip: "{{ attr.57.ip }}"
-   mask: 255.255.255.0
-   vip: 10.0.15.254
-   priority: "{{ attr.57.hsrp_pri }}"
- vlan58:
-   ip: "{{ attr.58.ip }}"
-   mask: 255.255.255.0
-   vip: 10.0.15.254
-   priority: "{{ attr.58.hsrp_pri }}"
-   
-ptp_int:
- e1/0:
-   desc: "{{ attr.e10.desc }}"
-   ip: "{{ attr.e10.ip }}"
-   mask: 255.255.255.252
- e2/0:
-   desc: "{{ attr.e20.desc }}"
-   ip: "{{ attr.e10.ip }}"
-   mask: 255.255.255.252
- e1/1:
-   desc: "{{ attr.e11.desc }}"
-   ip: "{{ attr.e11.ip }}"
-   mask: 255.255.255.252
- e1/2:
-   desc: "{{ attr.e12.desc }}"
-   ip: "{{ attr.e12.ip }}"
-   mask: 255.255.255.252
+  - name: vlan15
+    ip: "{{ vlan15_ip }}" 
+    mask: 255.255.255.0 
+    vip: 10.0.15.252 
+    pri: "{{ vlan15_pri }}" 
+    
+  - name: vlan16
+    ip: "{{ vlan16_ip }}"
+    mask: 255.255.255.0
+    vip: 10.0.15.252
+    pri: "{{ vlan16_pri }}" 
+    
+  - name: vlan17
+    ip: "{{ vlan17_ip }}"
+    mask: 255.255.255.0
+    vip: 10.0.15.252
+    pri: "{{ vlan17_pri }}
+    
+  - name: vlan18
+    ip: "{{ vlan18_ip }}"
+    mask: 255.255.255.0
+    vip: 10.0.15.252
+    pri: "{{ vlan18_pri }}
+    
+  - name: vlan55
+    ip: "{{ vlan55_ip }}"
+    mask: 255.255.255.0
+    vip: 10.0.15.252
+    pri: "{{ vlan55_pri }}
+    
+  - name: vlan55
+    ip: "{{ vlan55_ip }}"
+    mask: 255.255.255.0
+    vip: 10.0.15.252
+    pri: "{{ vlan55_pri }}
+    
+  - name: vlan56
+    ip: "{{ vlan55_ip }}"
+    mask: 255.255.255.0
+    vip: 10.0.15.252
+    pri: "{{ vlan55_pri }}
+    
+ptp_links:
+  - name: "Ethernet1/0"
+    desc: "{{ e10.desc }}"
+    ip: "{{ e10.ip }}"
+    mask: 255.255.255.252
+
+  - name: "Ethernet1/1"
+    desc: "{{ e11.desc }}"
+    ip: "{{ e11.ip }}"   
+    mask: 255.255.255.252
+
+  - name: "Ethernet1/2"
+    desc: "{{ e12.desc }}"
+    ip: "{{ e12.ip }}"   
+    mask: 255.255.255.252
+
+  - name: "Ethernet2/0"
+    desc: "{{ e20.desc }}"
+    ip: "{{ e20.ip }}"   
+    mask: 255.255.255.252
+
+trunk_ports:
+ - range: "Ethernet0/0 - 3"
+ 
+root_bri:
+    role: "{{ vlan15.root }}"
+  - id: 16
+    role: "{{ vlan16.root }}"
+  - id: 17
+    role: "{{ vlan17.root }}"
+  - id: 18
+    role: "{{ vlan18.root }}"
+  - id: 55
+    role: "{{ vlan55.root }}"
+  - id: 56
+    role: "{{ vlan56.root }}"
+  - id: 57
+    role: "{{ vlan57.root }}"
+  - id: 58
+    role: "{{ vlan58.root }}"
+    
