--- a/host_vars/core_sw_02.yml
+++ b/host_vars/core_sw_02.yml
@@ -1,47 +1,56 @@
 ---
-attr:
- 15:
-  ip: 10.0.15.253
-  hsrp_pri: 110
-  root: secondary
- 16:
-  ip: 10.0.16.253
-  hsrp_pri: 110
-  root: secondary
- 17:
-  ip: 10.0.17.253
-  hsrp_pri: 100
-  root: primary
- 18:
-  ip: 10.0.18.253
-  hsrp_pri: 100
-  root: primary
- 55:
-  ip: 10.0.55.253
-  hsrp_pri: 110
-  root: secondary
- 56:
-  ip: 10.0.56.253
-  hsrp_pri: 110
-  root: secondary
- 57:
-  ip: 10.0.57.253
-  hsrp_pri: 100
-  root: primary
- 58:
-  ip: 10.0.58.253
-  hsrp_pri: 100
-  root: primary
- e10:
-   desc: link-to-core_sw_02
+vlan15:
+   ip: 10.0.15.253 
+   pri: 90
+   root: secondary
+
+vlan16:
+   ip: 10.0.16.253 
+   pri: 90
+   root: secondary
+
+vlan17:
+   ip: 10.0.17.253 
+   pri: 110
+   root: primary
+
+vlan18:
+   ip: 10.0.18.253 
+   pri: 110
+   root: primary
+
+vlan55:
+   ip: 10.0.55.253 
+   pri: 90
+   root: secondary
+
+vlan56:
+   ip: 10.0.56.253 
+   pri: 90
+   root: secondary
+
+vlan57: 
+   ip: 10.0.57.253
+   pri: 110
+   root: primary
+
+vlan58:
+   ip: 10.0.58.253
+   pri: 110
+   root: primary
+   
+e10:
+   desc: "link-to core_sw_01 e1/0"
    ip: 10.0.100.2
- e20:
-   desc: link-to-core_sw_02
-   ip: 10.0.100.22
- e11:
-   desc: link-to-rtr_01
-   ip: 10.0.100.13
-   mask: 255.255.255.252
- e12:
-   desc: link-to-rtr_02
+
+e11:
+   desc: "link-to rtr_01 e0/1"
    ip: 10.0.100.17
+
+e12:
+   desc: "link-to rtr_02 e0/1"
+   ip : 10.0.100.21
+
+e20:
+   desc: "link-to core_sw_01 e2/0"
+   ip: 10.0.100.6
