--- a/host_vars/core_sw_01.yml
+++ b/host_vars/core_sw_01.yml
@@ -39,18 +39,18 @@ vlan58:
    pri: 90
    root: secondary
    
-e10:
-   desc: "link-to core_sw_02 e1/0"
+e20:
+   desc: "core_sw_02 (e2/0)" 
    ip: 10.0.100.1
 
-e11:
-   desc: "link-to rtr_01 e0/0"
-   ip: 10.0.100.9
-
-e12:
-   desc: "link-to rtr_02 e0/0"
-   ip : 10.0.100.13
-
-e20:
-   desc: "link-to core_sw_02 e2/0"
+e21:
+   desc: "core_sw_02 (e2/1)"
    ip: 10.0.100.5
+
+e22:
+   desc: "rtr_01 (e0/0)"
+   ip : 10.0.100.9
+   
+e23:
+   desc: "rtr_02 (e0/0)"
+   ip: 10.0.100.13
